Update version to 1.3.2-rtl

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "1.3.2",
+  "version": "1.3.2-rtl",
   "codename": "france",
   "homepage": "https://github.com/driftyco/ionic",
   "authors": [
